<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_marginTop="5dp">
	    <RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_weight="1">
		    <EditText		    
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:singleLine="true"
			android:inputType="phone"
			android:id="@+id/edittext_number">
			</EditText>
			<ImageView
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_marginRight="2dp"
			android:background="@drawable/clear"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:id="@+id/imageview_clear">
			</ImageView>
		</RelativeLayout>
	    <Button
	    android:layout_width="80dp"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:id="@+id/button_search"
	    android:text="@string/search">
	    </Button>
	    <LinearLayout
	    android:layout_width="80dp"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:id="@+id/linearlayout_progress"
	    android:visibility="gone"
	    android:gravity="center">
		    <ProgressBar
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:indeterminate="true"
		    android:id="@+id/progressbar"
		    >
		    </ProgressBar>
    	</LinearLayout>
    </LinearLayout>
    
    <ScrollView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
			<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_number"
		    android:gravity="center_vertical"
		    android:text="@string/number"
		    />
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_province"
		    android:gravity="center_vertical"
		    android:text="@string/province"
		    />
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_city"
		    android:gravity="center_vertical"
		    android:text="@string/city"
		    />
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_area_code"
		    android:gravity="center_vertical"
		    android:text="@string/area_code"
		    />
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_zip_code"
		    android:gravity="center_vertical"
		    android:text="@string/zip_code"
		    />
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="50dp" 
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:textColor="#000000"
		    android:id="@+id/textview_card"
		    android:gravity="center_vertical"
		    android:text="@string/card"
		    />
	    </LinearLayout>
    </ScrollView>
</LinearLayout>

